...
            )
        }
    }
}

internal val TOP_APP_BAR_HEIGHT = 64.dp
internal const val IMAGE_VIEWER_ASYNC_IMAGE_TEST_TAG = "IMAGE_VIEWER_ASYNC_IMAGE_TEST_TAG"
internal const val IMAGE_VIEWER_CLOSE_BUTTON_TEST_TAG = "IMAGE_VIEWER_CLOSE_BUTTON_TEST_TAG"
internal const val IMAGE_VIEWER_TITLE_TEST_TAG = "IMAGE_VIEWER_TITLE_TEST_TAG"

