...
            .fillMaxWidth()
            .padding(64.dp)
    )
}

internal const val FEED_SCREEN_TOP_APP_BAR_TITLE_TEST_TAG = "FEED_SCREEN_TOP_APP_BAR_TITLE_TEST_TAG"
internal const val FEED_SCREEN_PHOTO_GRID_TEST_TAG = "FEED_SCREEN_PHOTO_GRID_TEST_TAG"

@Preview(showBackground = true)
@Composable
private fun FeedScreenPreview() {
    FlickrHomeTaskTheme {
        FeedScreen(
...
